--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-hipchat": "^2.6.4-2",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "xml2js": ">= 0.4.4"
+    "xml2js": ">= 0.4.4",
+    "soupselect": ">= 0.2.0"
   },
   "engines": {
     "node": ">= 0.8.x",
