--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "hubot-hipchat": "^2.6.4-2",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "xml2js": ">= 0.4.4",
-    "soupselect": ">= 0.2.0"
+    "soupselect": ">= 0.2.0",
+    "htmlparser": ">= 1.7.7"
   },
   "engines": {
     "node": ">= 0.8.x",
