--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "xml2js": ">= 0.4.4",
     "soupselect": ">= 0.2.0",
-    "htmlparser": ">= 1.7.7"
+    "htmlparser": ">= 1.7.7",
+    "underscore": ">= 1.6.0"
   },
   "engines": {
     "node": ">= 0.8.x",
